// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown dropdown matches snapshot 1`] = `
<div
  class="ds-c-dropdown"
>
  <label
    class="ds-c-label"
    for="dropdown__button--1"
    id="dropdown__label--2"
  >
    <span
      class=""
    >
      Select an option
    </span>
  </label>
  <button
    aria-activedescendant=""
    aria-controls="dropdown__menu--3"
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-invalid="false"
    aria-labelledby="dropdown__label--2"
    class="ds-c-dropdown__button ds-c-field"
    id="dropdown__button--1"
    name="dropdown"
    role="combobox"
    tabindex="0"
  >
    2
  </button>
  <div
    class="ds-c-dropdown__menu-container"
    hidden=""
  >
    <ul
      aria-labelledby="dropdown__label--2"
      class="ds-c-dropdown__menu"
      id="dropdown__menu--3"
      role="listbox"
    >
      <li
        aria-selected="false"
        class="ds-c-dropdown__item"
        id="downshift-0-item-0"
      >
        1
      </li>
      <li
        aria-selected="true"
        class="ds-c-dropdown__item ds-c-dropdown__item--selected"
        id="downshift-0-item-1"
      >
        2
      </li>
      <li
        aria-selected="false"
        class="ds-c-dropdown__item"
        id="downshift-0-item-2"
      >
        3
      </li>
      <li
        aria-selected="false"
        class="ds-c-dropdown__item"
        id="downshift-0-item-3"
      >
        4
      </li>
    </ul>
  </div>
</div>
`;

exports[`Dropdown supports bottom placed error 1`] = `
<div>
  <div
    class="ds-c-dropdown"
  >
    <label
      class="ds-c-label"
      for="dropdown__button--19"
      id="dropdown__label--20"
    >
      <span
        class=""
      >
        Select an option
      </span>
    </label>
    <button
      aria-activedescendant=""
      aria-controls="dropdown__menu--21"
      aria-describedby="1_error"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-invalid="true"
      aria-labelledby="dropdown__label--20"
      class="ds-c-dropdown__button ds-c-field ds-c-field--error"
      id="dropdown__button--19"
      name="dropdown"
      role="combobox"
      tabindex="0"
    >
      1
    </button>
    <div
      class="ds-c-dropdown__menu-container"
      hidden=""
    >
      <ul
        aria-labelledby="dropdown__label--20"
        class="ds-c-dropdown__menu"
        id="dropdown__menu--21"
        role="listbox"
      >
        <li
          aria-selected="true"
          class="ds-c-dropdown__item ds-c-dropdown__item--selected"
          id="downshift-6-item-0"
        >
          1
        </li>
      </ul>
    </div>
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="ds-c-inline-error ds-c-field__error-message ds-c-field__error-message--bottom"
      id="1_error"
    >
      <svg
        aria-hidden="true"
        class="ds-c-icon ds-c-icon--alert-circle "
        focusable="false"
        id="icon-9"
        viewBox="36 -12 186 186"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M162.18 41.592c-5.595-9.586-13.185-17.176-22.771-22.771-9.588-5.595-20.055-8.392-31.408-8.392-11.352 0-21.821 2.797-31.408 8.392-9.587 5.594-17.177 13.184-22.772 22.771-5.596 9.587-8.393 20.057-8.393 31.408 0 11.351 2.798 21.82 8.392 31.408 5.595 9.584 13.185 17.176 22.772 22.771 9.587 5.595 20.056 8.392 31.408 8.392s21.822-2.797 31.408-8.392c9.586-5.594 17.176-13.185 22.771-22.771C167.773 94.82 170.57 84.35 170.57 73c0-11.351-2.797-21.822-8.39-31.408zm-43.75 70.433c0 .761-.246 1.398-.734 1.914s-1.086.773-1.793.773H100.26c-.706 0-1.331-.271-1.874-.814-.543-.543-.814-1.168-.814-1.873V96.546c0-.706.271-1.331.814-1.874.543-.543 1.168-.814 1.874-.814h15.643c.707 0 1.306.258 1.793.773.488.518.734 1.154.734 1.915v15.479zm-.164-28.026c-.055.543-.339 1.019-.854 1.426-.517.407-1.154.61-1.914.61h-15.073c-.761 0-1.413-.203-1.956-.61-.543-.407-.815-.883-.815-1.426l-1.385-50.595c0-.653.271-1.141.814-1.467.544-.434 1.196-.652 1.956-.652h17.926c.761 0 1.412.217 1.955.652.543.326.813.815.813 1.467l-1.467 50.595z"
        />
      </svg>
      Error
    </span>
  </div>
</div>
`;
